--- a/css/table.css
+++ b/css/table.css
@@ -11,11 +11,12 @@
 
 		@media (prefers-color-scheme: light) {
 		  .table-container {
+			/* background: none; */
 		    background: url("../img/pattern-light.png") center repeat;
 		    background-size: contain;
 		    -webkit-animation: backgroundScroll 60s linear infinite;
 		    animation: backgroundScroll 60s linear infinite;
-		    border: 4px solid rgb(0, 0, 0);
+		    /* border: 4px solid rgb(0, 0, 0); */
 		    padding: 30px;
 		    margin: auto;
 		    margin-left: auto;
@@ -653,7 +654,7 @@
 		    -webkit-animation: backgroundScroll 60s linear infinite;
 		    animation: backgroundScroll 60s linear infinite;
 		    color: #001e4b;
-		    border: 4px solid #ffffff;
+		    /* border: 4px solid #ffffff; */
 		    padding: 30px;
 		    margin: auto;
 		    margin-left: auto;
